[gd_scene load_steps=11 format=2]

[ext_resource path="res://flat_platform_moving.gd" type="Script" id=1]
[ext_resource path="res://travel_direction_area.gd" type="Script" id=2]
[ext_resource path="res://platform3.png" type="Texture" id=3]

[sub_resource type="PhysicsMaterial" id=1]
friction = 100000.0
rough = true
absorbent = true

[sub_resource type="CubeMesh" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 0.300428, 0.384754 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 30.0052, 9.28759 )

[sub_resource type="PhysicsMaterial" id=5]
friction = 0.0

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 30.7025, 4.74048 )

[sub_resource type="OccluderPolygon2D" id=7]
polygon = PoolVector2Array( -69.8833, -6.2528, 69.7055, -6.25281, 70.0208, 6.46575, -70.0936, 6.46575 )

[node name="flat_platform_moving" type="StaticBody2D"]
collision_layer = 2
physics_material_override = SubResource( 1 )
script = ExtResource( 1 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
visible = false
scale = Vector2( 30, 10 )
mesh = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.0391884, -0.542225 )
scale = Vector2( 230, 25 )
shape = SubResource( 3 )

[node name="travel_direction_area" type="Area2D" parent="."]
collision_layer = 2
script = ExtResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="travel_direction_area"]
position = Vector2( 0, -0.794329 )
scale = Vector2( 2.3, 1 )
shape = SubResource( 4 )

[node name="StaticBody2D_blocker" type="StaticBody2D" parent="."]
position = Vector2( 1.0231, 1.53465 )
collision_layer = 2
physics_material_override = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D_blocker"]
position = Vector2( -0.950264, 6.12932 )
scale = Vector2( 2.3, 1 )
shape = SubResource( 6 )

[node name="platform3" type="Sprite" parent="."]
position = Vector2( -35, 0 )
texture = ExtResource( 3 )

[node name="platform4" type="Sprite" parent="."]
position = Vector2( 35, 0 )
texture = ExtResource( 3 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 7 )
[connection signal="area_entered" from="travel_direction_area" to="travel_direction_area" method="_on_travel_direction_area_area_entered"]
[connection signal="body_entered" from="travel_direction_area" to="." method="_on_travel_direction_area_body_entered"]
[connection signal="body_exited" from="travel_direction_area" to="." method="_on_travel_direction_area_body_exited"]
